--- a/multi-touch-attribution.ipynb
+++ b/multi-touch-attribution.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "2  Start  C2   C3  NaN         NaN"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "0     C3  Conversion"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "3  Start           3"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "8     C3  Conversion           2"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "8     C3  Conversion           2     0.500000"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "6  Start          C2     0.333333"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "3  Start          1.0"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -925,8 +925,9 @@
     "                print('----------------------------')\n",
     "    \n",
     "    total_node_probability = sum(child_node_proabilities)\n",
-    "    print('Node Conversion Probability for %s: %0.2f' % (starting_state, total_node_probability))\n",
-    "    print('----------------------------')\n",
+    "    if debug:\n",
+    "        print('Node Conversion Probability for %s: %0.2f' % (starting_state, total_node_probability))\n",
+    "        print('----------------------------')\n",
     "    \n",
     "    # We'll cache the calculated total probability for the node, so we don't have to calculate it again.\n",
     "    calculated_node_probabilities[starting_state] = total_node_probability\n",
@@ -936,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1021,6 +1022,247 @@
    "metadata": {},
    "source": [
     "## 5. Calculate Removal Effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>t_plus_1</th>\n",
+       "      <th>probability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>C1</td>\n",
+       "      <td>C2</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C1</td>\n",
+       "      <td>Exit</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C2</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C3</td>\n",
+       "      <td>Conversion</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>C3</td>\n",
+       "      <td>Exit</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Start</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Start</td>\n",
+       "      <td>C2</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       t    t_plus_1  probability\n",
+       "0     C1          C2     0.500000\n",
+       "1     C1        Exit     0.500000\n",
+       "2     C2          C3     1.000000\n",
+       "3     C3  Conversion     0.500000\n",
+       "4     C3        Exit     0.500000\n",
+       "5  Start          C1     0.666667\n",
+       "6  Start          C2     0.333333"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_transition_prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "unique_channels = df_transition_prob['t'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_reduced_graph = df_transition_prob[df_transition_prob['t'] != 'C1']\n",
+    "pd.options.mode.chained_assignment = None \n",
+    "df_reduced_graph.loc[df_reduced_graph['t_plus_1']=='C1', 't_plus_1'] = 'Exit'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>t_plus_1</th>\n",
+       "      <th>probability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C2</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C3</td>\n",
+       "      <td>Conversion</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>C3</td>\n",
+       "      <td>Exit</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Start</td>\n",
+       "      <td>Exit</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Start</td>\n",
+       "      <td>C2</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       t    t_plus_1  probability\n",
+       "2     C2          C3     1.000000\n",
+       "3     C3  Conversion     0.500000\n",
+       "4     C3        Exit     0.500000\n",
+       "5  Start        Exit     0.666667\n",
+       "6  Start          C2     0.333333"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_reduced_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculated_node_probabilities = dict()\n",
+    "new_total_probability = calc_conversion_probability('Start', \n",
+    "                                                    df_reduced_graph, \n",
+    "                                                    0, \n",
+    "                                                    calculated_node_probabilities, \n",
+    "                                                    debug=False)\n",
+    "removal_effect = (1 - new_total_probability)/total_probability\n",
+    "removal_effect = (total_probability - new_total_probability)/total_probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability before removing element: 0.333\n",
+      "Probability after removing element : 0.167\n",
+      "The removal effect for C1 is: 0.500\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Probability before removing element: %0.3f' % total_probability)\n",
+    "print('Probability after removing element : %0.3f' % new_total_probability)\n",
+    "print('The removal effect for C1 is: %0.3f' % removal_effect)"
    ]
   },
   {
