--- a/multi-touch-attribution.ipynb
+++ b/multi-touch-attribution.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "2  Start  C2   C3  NaN         NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "0     C3  Conversion"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "3  Start           3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "8     C3  Conversion           2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "8     C3  Conversion           2     0.500000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "6  Start          C2     0.333333"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "3  Start          1.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -901,7 +901,8 @@
     "            \n",
     "            # Have we cached the total probability for this node???\n",
     "            if row['t_plus_1'] in calculated_nodes:\n",
-    "                print('Cache Hit for %s! Cum probability from child: %0.2f' % (row['t_plus_1'], calculated_nodes[row['t_plus_1']]))\n",
+    "                if debug:\n",
+    "                    print('Cache Hit for %s! Cum probability from child: %0.2f' % (row['t_plus_1'], calculated_nodes[row['t_plus_1']]))\n",
     "                child_probability = calculated_nodes[row['t_plus_1']]\n",
     "            \n",
     "            # No cached value found. We'll walk through the tree to calculated the value.\n",
@@ -937,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1119,150 +1120,79 @@
     }
    ],
    "source": [
+    "# Let's look at our transition probability table again. We'll tweak this to calculate the \n",
+    "# removal effect.\n",
     "df_transition_prob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "unique_channels = df_transition_prob['t'].unique()"
+    "unique_channels = df_transition_prob[df_transition_prob['t'] != 'Start']['t'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_reduced_graph = df_transition_prob[df_transition_prob['t'] != 'C1']\n",
-    "pd.options.mode.chained_assignment = None \n",
-    "df_reduced_graph.loc[df_reduced_graph['t_plus_1']=='C1', 't_plus_1'] = 'Exit'"
+    "pd.options.mode.chained_assignment = None  # I know, this makes me a very bad person.\n",
+    "removal_effects = dict()\n",
+    "\n",
+    "# Remove each channel and calculate the impact\n",
+    "for channel in unique_channels:\n",
+    "    \n",
+    "    # Remove the channel from the transition probability matrix\n",
+    "    df_reduced_graph = df_transition_prob[df_transition_prob['t'] != channel]\n",
+    "    df_reduced_graph.loc[df_reduced_graph['t_plus_1']==channel, 't_plus_1'] = 'Exit'\n",
+    "    \n",
+    "    # Recalculate the total conversion probability\n",
+    "    calculated_node_probabilities = dict()\n",
+    "    new_total_probability = calc_conversion_probability('Start', \n",
+    "                                                        df_reduced_graph, \n",
+    "                                                        0, \n",
+    "                                                        calculated_node_probabilities, \n",
+    "                                                        debug=False)\n",
+    "    \n",
+    "    # Calculate the difference in conversion probability\n",
+    "    removal_effect = (total_probability - new_total_probability)/total_probability\n",
+    "    removal_effects[channel] = removal_effect\n",
+    "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t</th>\n",
-       "      <th>t_plus_1</th>\n",
-       "      <th>probability</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C2</td>\n",
-       "      <td>C3</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>C3</td>\n",
-       "      <td>Conversion</td>\n",
-       "      <td>0.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>C3</td>\n",
-       "      <td>Exit</td>\n",
-       "      <td>0.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Start</td>\n",
-       "      <td>Exit</td>\n",
-       "      <td>0.666667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Start</td>\n",
-       "      <td>C2</td>\n",
-       "      <td>0.333333</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       t    t_plus_1  probability\n",
-       "2     C2          C3     1.000000\n",
-       "3     C3  Conversion     0.500000\n",
-       "4     C3        Exit     0.500000\n",
-       "5  Start        Exit     0.666667\n",
-       "6  Start          C2     0.333333"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df_reduced_graph"
+    "## 6. Results: Which channels have the greatest impact?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "calculated_node_probabilities = dict()\n",
-    "new_total_probability = calc_conversion_probability('Start', \n",
-    "                                                    df_reduced_graph, \n",
-    "                                                    0, \n",
-    "                                                    calculated_node_probabilities, \n",
-    "                                                    debug=False)\n",
-    "removal_effect = (1 - new_total_probability)/total_probability\n",
-    "removal_effect = (total_probability - new_total_probability)/total_probability"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability before removing element: 0.333\n",
-      "Probability after removing element : 0.167\n",
-      "The removal effect for C1 is: 0.500\n"
+      "Removal effect by channel:\n",
+      "C1: 0.50\n",
+      "C2: 1.00\n",
+      "C3: 1.00\n"
      ]
     }
    ],
    "source": [
-    "print('Probability before removing element: %0.3f' % total_probability)\n",
-    "print('Probability after removing element : %0.3f' % new_total_probability)\n",
-    "print('The removal effect for C1 is: %0.3f' % removal_effect)"
+    "print('Removal effect by channel:')\n",
+    "for key, value in removal_effects.items(): \n",
+    "    print('%s: %0.2f' % (key, value))"
    ]
   },
   {
