Removed references to unused libraries.

--- a/multi-touch-attribution.ipynb
+++ b/multi-touch-attribution.ipynb
@@ -19,17 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "import sys"
+    "import pandas as pd"
    ]
   },
   {
